tests/snapshots/cmd_update__cmd_update__update_all-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
     Updated Swatinem/rust-cache v2.7.0 -> v2.7.8 (9d47c6ad4b02)
     Updated actions/checkout v4.1.0 -> v4.2.2 (11bd71901bbe)
