tests/snapshots/cmd_update__cmd_update__update_branch_ref-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
     Updated dtolnay/rust-toolchain stable -> stable (a3b77706cfa4)
